alterou o index e adicionou pasta img

--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
     <title>Meu Primeiro Site</title>
 </head>
 <body>
-    <h1>html</h1>
+    <h1>edsenvolvimento web</h1>
    <p>
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum pariatur vero quibusdam, tenetur laudantium corrupti similique aliquid illum labore architecto, officia nulla? Natus voluptatibus, assumenda autem inventore est reprehenderit officiis.
    </p>
-   <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio cum ea sequi molestias! Culpa explicabo nam quas incidunt beatae corrupti, perferendis rerum omnis possimus tempora reprehenderit dolore inventore ducimus odit?
-   </p>
+   
  <h2>Tecnologias para Desenvolvimento Web</h2>
  <ul>
-<li>hmtl</li>
-<li>css</li>
-<li>js</li>
-<li>php</li>
-<li>java</li>
+<li>HTML significa linguagem de marcação de hipertexto</li>
+<li>HTML  é a linguagem de marcação padrão para criação de páginas da Web</li>
+<li>HTML descreve a estrutura de uma página da Web</li>
+<li>HTML consiste em uma série de elementos</li>
+<li>Os elementos HTML rotulam partes do conteúdo como “este é um título”, “este é um parágrafo”, “este é um link”, etc.</li>
 </ul>
+
+<img src="img/unnamed.png" alt="desenho da estrutura html" width="500" height="333">
+
+
 </body>
 </html>
+<h2>o que é css</h2>
