--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Primeiro Site</title>
+   <link rel="stylesheet" href="css/estilo.css">
 </head>
-<body>
-    <h1>edsenvolvimento web</h1>
-   <p>
+<body >
+    <h1>desenvolvimento web</h1>
+   <p>  
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum pariatur vero quibusdam, tenetur laudantium corrupti similique aliquid illum labore architecto, officia nulla? Natus voluptatibus, assumenda autem inventore est reprehenderit officiis.
    </p>
    
@@ -22,6 +23,7 @@
 
 <img src="img/unnamed.png" alt="desenho da estrutura html" width="500" height="333">
 
+<a href="outro.html">vá para a outra pagina</a>
 
 </body>
 </html>
