--- a/cssinternoinline.html
+++ b/cssinternoinline.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>exemplo css</title>
 </head>
-<body style="background-color: rgb(236, 213, 241);">
-    <h1 style="color: #a6a1f1; font-size: 50px;">  EXEMPLO DE TITULO</h1>
-    <h1 style="color: #9a94e6;">outro titulo</h1>
+<body style="background-color: rgb(244, 200, 253);">
+    <h1 style="color: #7a74cf; font-size: 50px;">  EXEMPLO DE TITULO</h1>
+    <h1 style="color: #827cd3;">outro titulo</h1>
 </body>
 </html>
