--- a/index.html
+++ b/index.html
@@ -14,17 +14,26 @@
    
  <h2>Tecnologias para Desenvolvimento Web</h2>
  <ul>
-<li>HTML significa linguagem de marcação de hipertexto</li>
-<li>HTML  é a linguagem de marcação padrão para criação de páginas da Web</li>
-<li>HTML descreve a estrutura de uma página da Web</li>
-<li>HTML consiste em uma série de elementos</li>
-<li>Os elementos HTML rotulam partes do conteúdo como “este é um título”, “este é um parágrafo”, “este é um link”, etc.</li>
-</ul>
+  <li>HTML significa linguagem de marcação de hipertexto</li>
+  <li>HTML  é a linguagem de marcação padrão para criação de páginas da Web</li>
+  <li>HTML descreve a estrutura de uma página da Web</li>
+  <li>HTML consiste em uma série de elementos</li>
+  <li>Os elementos HTML rotulam partes do conteúdo como “este é um título”, “este é um parágrafo”, “este é um link”, etc.</li></ul>
 
-<img src="img/unnamed.png" alt="desenho da estrutura html" width="500" height="333">
 
-<a href="outro.html">vá para a outra pagina</a>
+  <img src="img/unnamed.png" alt="desenho da estrutura html" width="500" height="333">
 
-</body>
-</html>
-<h2>o que é css</h2>
+  <a href="outro.html">vá para a outra pagina</a>
+  
+  </body>
+  </html>
+  <h2>o que é css</h2>
+  <p>CSS é a linguagem que usamos para estilizar uma página da Web.</p>
+    <ult>
+      <li>CSS significa Folhas de Estilo em Cascata</li>
+        <li>CSS descreve como os elementos HTML devem ser exibidos na tela, no papel ou em outras mídias</li>
+        <li>CSS economiza muito trabalho. Ele pode controlar o layout de várias páginas da web de uma só vez</li>
+        <li>Folhas de estilo externas são armazenadas em arquivos CSS</li>
+    </ult>
+  
+  
