--- a/index.html
+++ b/index.html
@@ -1,39 +1,28 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Primeiro Site</title>
-   <link rel="stylesheet" href="css/estilo.css">
+    <title>genshin impact</title>
+    <link rel="stylesheet" href="css/meuestilo.css">
 </head>
-<body >
-    <h1>desenvolvimento web</h1>
-   <p>  
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum pariatur vero quibusdam, tenetur laudantium corrupti similique aliquid illum labore architecto, officia nulla? Natus voluptatibus, assumenda autem inventore est reprehenderit officiis.
-   </p>
-   
- <h2>Tecnologias para Desenvolvimento Web</h2>
- <ul>
-  <li>HTML significa linguagem de marcação de hipertexto</li>
-  <li>HTML  é a linguagem de marcação padrão para criação de páginas da Web</li>
-  <li>HTML descreve a estrutura de uma página da Web</li>
-  <li>HTML consiste em uma série de elementos</li>
-  <li>Os elementos HTML rotulam partes do conteúdo como “este é um título”, “este é um parágrafo”, “este é um link”, etc.</li></ul>
-
-
-  <img src="img/unnamed.png" alt="desenho da estrutura html" width="500" height="333">
-
-  <a href="outro.html">vá para a outra pagina</a>
-  
-  </body>
-  </html>
-  <h2>o que é css</h2>
-  <p>CSS é a linguagem que usamos para estilizar uma página da Web.</p>
-    <ult>
-      <li>CSS significa Folhas de Estilo em Cascata</li>
-        <li>CSS descreve como os elementos HTML devem ser exibidos na tela, no papel ou em outras mídias</li>
-        <li>CSS economiza muito trabalho. Ele pode controlar o layout de várias páginas da web de uma só vez</li>
-        <li>Folhas de estilo externas são armazenadas em arquivos CSS</li>
-    </ult>
-  
-  
+<body>
+    <header>
+        <div class="logo">
+            logotipo
+        </div>
+        <nav>
+            Aqui vai o Menu
+        </nav>
+    </header>
+    <main>
+     <section>primeira sessão</section>
+     <section>segunda sessão</section>
+     <section>terceira sessão</section>
+    </main>
+    <footer>
+         Rodapé da Página
+    </footer>
+</body>
+</html>
