--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>genshin impact</title>
     <link rel="stylesheet" href="css/meuestilo.css">
+    <link rel="stylesheet" href="css/estiloreserva.css">
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
         <div class="logo">
             logotipo
         </div>
-        <nav>
+        <nav id="menu">
+            <ul>
+                 <li><a href="#">personagens</a></li>
+                 <li><a href="#">lugares</a></li>
+                 <li><a href="">historia dos personagens</a></li>
+                 <li><a href="">historia prinipal</a></li>
+            </ul>
             Aqui vai o Menu
         </nav>
     </header>
@@ -21,7 +28,7 @@
      <section>segunda sessão</section>
      <section>terceira sessão</section>
     </main>
-    <footer>
+    <footer class="Rodapé">
          Rodapé da Página
     </footer>
 </body>
