--- a/index.html
+++ b/index.html
@@ -140,18 +140,18 @@
  
        <h4 >Extenções de regiões</h4>
 
-     <P> A primeira extenção que tivemos foi as minas Subterrâneas, que vieram como uma extenção do Despenhadeiro</P>
+     <P>    A primeira extenção que tivemos foi enkanomia, que veio como uma extenção de inazuma</P>
      <div class="caixa-imagem">
       <figure>
-        <img src="img/mapa mina.webp" alt="o mapa mostra a extenção de Liyue">
+        <img src="img/enkanomia.jpg" alt="o mapa mostra a extenção de Liyue">
      <figcaption>Minas Subterrâneas</figcaption>
       </figure>
    </div>
 
-   <P> A segunda extenção que tivemos foi enkanomia, que veio como uma extenção de inazuma</P>
+   <P>  A segunda extenção que tivemos foi as minas Subterrâneas, que vieram como uma extenção do Despenhadeiro</P>
    <div class="caixa-imagem">
     <figure>
-      <img src="img/enkanomia.jpg" alt="o mapa mostra a extenção de inazuma">
+      <img src="img/mapa mina.webp" alt="o mapa mostra a extenção de inazuma">
    <figcaption>enkanomia</figcaption>
     </figure>
  </div>
