--- a/index.html
+++ b/index.html
@@ -8,29 +8,27 @@
     <link rel="stylesheet" href="css/meuestilo.css">
     <link rel="stylesheet" href="css/estiloreserva.css">
 </head>
-<body>
-    <header class="cabecalho">
-        <div class="logo">
-        <img src="img/logo.png" alt="">
-        </div> 
-         <nav id="Menu">
-          <input type="checkbox" id="menu-toggle">
-          <label for="menu-toggle" class="menu-icon">&#9776;</label>
-            <ul>
-                 <li></a href= "#" onclick= "document.getelementByID('menu-toggle').click()"> Basico da Historia</a></li>
-                 <li></a href= "#" onclick= "document.getelementByID('menu-toggle').click()"> Historia principal</a></li>
-                 <li></a href= "#" onclick= "document.getelementByID('menu-toggle').click()"> personagens principais</a></li>
-                 <li></a href= "#" onclick= "document.getelementByID('menu-toggle').click()">Mapa de mundo</a></li>
-                 <li></a href= "#" onclick= "document.getelementByID('menu-toggle').click()">Mapa extra</a></li>
-            </ul>
-      </nav>
-    </header>
-    <main>
+<header class="cabecalho">
+   <div class="logo">
+   <img src="img/logo.png" alt="">
+   </div>
+    <nav id="Menu">
+     <input type="checkbox" id="menu-toggle">
+     <label for="menu-toggle" class="menu-icon">&#9776;</label>
+       <ul>
+            <li></a href= "#" onclick= "document.getelementByID('menu-toggle').click()"> Basico da Historia</a></li>
+            <li></a href= "#" onclick= "document.getelementByID('menu-toggle').click()"> Historia principal</a></li>
+            <li></a href= "#" onclick= "document.getelementByID('menu-toggle').click()"> personagens principais</a></li>
+            <li></a href= "#" onclick= "document.getelementByID('menu-toggle').click()">Mapa de mundo</a></li>
+            <li></a href= "#" onclick= "document.getelementByID('menu-toggle').click()">Mapa extra</a></li>
+       </ul>
+ </nav>
+</header>
+<main>
       <h1 class="titulos">Basico da Historia</h1>
        
-      <p>Em um mundo chamado Teyvat, algumas pessoas escolhidas receberam uma visão, pedras que dão aos seus portadores a habilidade de controlar um elemento ( Pyro(fogo),hydro (água),Cryo (gelo), Anemo (vento), Geo (terra) e electro (eletricidade)) dos Arcontes, pessoas tão poderosas quanto Deuses que governam cada região e cidade do mundo de Teyvat sobre o nome "Os Sete". Sendo cada Arconte responsável por um elemento (por isso o nome "os sete").<p>
-
-      </p> O jogador começa como um viajante de origem desconhecida que está em busca de seu irmão/sua irmã perdido(a). É possível que o jogador escolha ser o viajante (Aether) ou a veaijante (Lumine). No decorrer da aventura, o jogador pode controlar uma série de outros personagens encontrados durante a jornada, cada um possui uma personalidade única e uma habilidade especial, ajudando nas missões e facilitando na busca pela verdade sobre esse mundo</p>
+      <p>Em um mundo chamado Teyvat, algumas pessoas escolhidas receberam uma visão, pedras que dão aos seus portadores a habilidade de controlar um elemento ( Pyro(fogo),hydro (água),Cryo (gelo), Anemo (vento), Geo (terra) e electro (eletricidade)) dos Arcontes, pessoas tão poderosas quanto Deuses que governam cada região e cidade do mundo de Teyvat sobre o nome "Os Sete". Sendo cada Arconte responsável por um elemento (por isso o nome "os sete").
+       O jogador começa como um viajante de origem desconhecida que está em busca de seu irmão/sua irmã perdido(a). É possível que o jogador escolha ser o viajante (Aether) ou a veaijante (Lumine). No decorrer da aventura, o jogador pode controlar uma série de outros personagens encontrados durante a jornada, cada um possui uma personalidade única e uma habilidade especial, ajudando nas missões e facilitando na busca pela verdade sobre esse mundo</p>
    
       <div>
         <section>
