--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
      <div class="caixa-imagem">
       <figure>
-        <img src="img/mondstard.jpg" alt="A imagem mostraa cida de mondstadt">
+        <img src="img/mondstadt.jpg" alt="A imagem mostraa cida de mondstadt">
      <figcaption>Cidade de Mondstadt</figcaption>
       </figure>
    </div>
@@ -138,21 +138,53 @@
  
        <h4 >Extenções de regiões</h4>
 
-     <P>    A primeira extenção que tivemos foi enkanomia, que veio como uma extenção de inazuma</P>
+     <P>  A primeira extenção que tivemos foi enkanomia, que veio como uma extenção de inazuma</P>
      <div class="caixa-imagem">
       <figure>
-        <img src="img/enkanomia.jpg" alt="o mapa mostra a extenção de Liyue">
-     <figcaption>Minas Subterrâneas</figcaption>
+        <img src="img/enkanomia.jpg" alt="o mapa mostra a extenção de inazuma">
+     <figcaption>enkanomia</figcaption>
+     <figure>
+      <img src="img/enkanomia local.png" alt="o mapa mostra a extenção de inazuma">
+   <figcaption>enkanomia</figcaption>
       </figure>
    </div>
 
    <P>  A segunda extenção que tivemos foi as minas Subterrâneas, que vieram como uma extenção do Despenhadeiro</P>
    <div class="caixa-imagem">
     <figure>
-      <img src="img/mapa mina.webp" alt="o mapa mostra a extenção de inazuma">
-   <figcaption>enkanomia</figcaption>
+      <img src="img/mapa mina.webp" alt="o mapa mostra a extenção de Liyue">
+   <figcaption>despenhadeiro</figcaption>
+    </figure>
+    <img src="img/minas.png" alt="o mapa mostra a extenção de Liyue">
+   <figcaption>despenhadeiro</figcaption>
+    </figure>
+ 
+  </div>
+
+  <P> A tercira extenção que tivemos foi o bule de relachar com algumas formas que consguiamos escolher</P>
+   <div class="caixa-imagem">
+    <figure>
+      <img src="img/formas bule.webp" alt="o mapa mostra a extenção do bule">
+   <figcaption>bule</figcaption>
     </figure>
  </div>
+
+</div>
+
+<P> A ultima extenção que tivemos foi a de Fontaine, basicamente a antiga cidade de fonteine que é submersa</P>
+ <div class="caixa-imagem">
+  <figure>
+    <img src="img/mapa mar antigo.webp" alt="o mapa mostra a extenção de fontaine">
+ <figcaption>mar antigo</figcaption>
+  </figure>
+  <figure>
+   <img src="img/mar1.png" alt="o mapa mostra a extenção de fontaine">
+ </figure>
+ <figure>
+   <img src="img/mar2.png" alt="o mapa mostra a extenção de fontaine">
+<figcaption>mar antigo</figcaption>
+ </figure>
+</div>
 
    </div>
   </section>
